<resources>
    <string name="app_name">NevaTools</string>
    <string name="app_version">v 1.39.1</string>
    <string name="menu_main">Главная страница</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="menu_connection">Подключение к ККТ</string>
    <string name="menu_settings">Настройки ККТ</string>
    <string name="menu_kkt_info">Информация о ККТ</string>
    <string name="menu_fn_info">Информация о ФН</string>
    <string name="menu_reg_kkt">Регистрация ККТ</string>
    <string name="menu_cheques">Чеки</string>
    <string name="menu_reports">Отчёты</string>
    <string name="menu_cashier">Ввод данных кассира</string>
    <string name="menu_km_check">Проверка КМ</string>
    <string name="menu_service">Служебные функции</string>
    <string name="menu_test_print">Тестовая печать</string>
    <string name="menu_fin_ops">Внесения/выплаты</string>
    <string name="main_info_title">Информация</string>
    <string name="main_driver_version">Версия драйвера:</string>
    <string name="main_kkt_name">Название ККТ:</string>
    <string name="main_kkt_serial">Заводской номер ККТ:</string>
    <string name="main_driver_version_data">Нет подключения</string>
    <string name="main_kkt_name_data">Нет подключения</string>
    <string name="main_kkt_serial_data">Нет подключения</string>
    <string name="main_kkt_status_title">Статус ККТ</string>
    <string name="main_kkt_datetime">Дата и время:</string>
    <string name="main_kkt_shift_state">Состояние смены:</string>
    <string name="main_kkt_cap_state">Состояние крышки:</string>
    <string name="main_kkt_paper_state">Наличие бумаги:</string>
    <string name="main_kkt_datetime_data">Нет подключения</string>
    <string name="main_kkt_shift_state_data">Нет подключения</string>
    <string name="main_kkt_cap_state_data">Нет подключения</string>
    <string name="main_kkt_paper_state_data">Нет подключения</string>
    <string name="main_ofd_status_title">Статус обмена с ОФД</string>
    <string name="main_unsent_docs_count">Кол-во неотправленных док-ов:</string>
    <string name="main_first_unsent_doc">Первый неотправленный документ:</string>
    <string name="main_unsent_docs_count_data">Нет подключения</string>
    <string name="main_first_unsent_doc_data">Нет подключения</string>
    <string name="main_ops_title">Файловые операции:</string>
    <string name="main_export_logs">Выгрузить логи приложения</string>
    <string name="main_import_img">Загрузить картинку в память ККТ</string>
    <string name="main_export_settings">Экспорт настроек</string>
    <string name="main_import_settings">Импорт настроек</string>
    <string name="main_clear_imgs">Очистить картинки в памяти ККТ</string>
    <string name="main_read_stat">Выгрузить статистику по ККТ</string>
    <string name="connection_reconnect">Автоматически восстанавливать связь:</string>
    <string name="connection_kkt_model">Модель ККТ:</string>
    <string name="connection_odf_channel">Канал до ОФД:</string>
    <string name="connection_kkt_connection_type">Способ связи с ККТ:</string>
    <string name="connection_kkt">Устройство:</string>
    <string name="connection_server_title"> Сервер сбора статистики:</string>
    <string name="connection_server_url">URL:</string>
    <string name="connection_server_username">Логин:</string>
    <string name="connection_server_password">Пароль:</string>
    <string name="connection_connect">Подключиться</string>
    <string name="kkt_ip">IP адрес:</string>
    <string name="kkt_port">Порт:</string>
    <string name="kkt_com">Номер COM-порта:</string>
    <string name="kkt_baudrate">Скорость:</string>
    <string name="settings_main">1 - Основные</string>
    <string name="settings_connection">2 - Канал связи</string>
    <string name="settings_payments">3 - Оплаты</string>
    <string name="settings_print">5 - Печать</string>
    <string name="settings_reports">6 - Настройки отчётов</string>
    <string name="settings_font">7 - Шрифт</string>
    <string name="settings_users">8 - Пользователи и пароли</string>
    <string name="settings_cliche">9 - Клише</string>
    <string name="settings_service_docs">10 - Служебные документы</string>
    <string name="settings_ofd">15 - ОФД</string>
    <string name="settings_sections">18 - Секции</string>
    <string name="settings_diagnostic">19 - Диагностика</string>
    <string name="settings_km">26 - Работа с КМ</string>
    <string name="main_settings_kkt_number">Номер ККТ в магазине:</string>
    <string name="main_settings_encashment">Производить инкассацию:</string>
    <string name="main_settings_open_cashbox">Открывать ДЯ при закрытии чека:</string>
    <string name="main_settings_kkt_protocol">Протокол работы ККТ:</string>
    <string name="main_settings_default_sno">СНО по-умолчанию:</string>
    <string name="main_settings_payment_method">Способ расчёта по-умолчанию:</string>
    <string name="main_settings_cash_accounting">Учёт наличности:</string>
    <string name="main_settings_payment_subject">Предмет расчёта по-умолчанию:</string>
    <string name="main_settings_cut_method">Способ отрезки док-ов:</string>
    <string name="main_settings_cut_cheques">Запретить отрезку чеков:</string>
    <string name="main_settings_cut_reports">Запретить отрезку отчётов</string>
    <string name="connection_settings_dhcp_enabled">Получать IP-адрес по DHCP:</string>
    <string name="connection_settings_kkt_ip">IP-адрес:</string>
    <string name="connection_settings_kkt_netmask">Маска подсети:</string>
    <string name="connection_settings_kkt_gateway">Шлюз по-умолчанию:</string>
    <string name="payment_setting_payment2_typename">Способ расчёта 2:</string>
    <string name="payment_setting_payment3_typename">Способ расчёта 3:</string>
    <string name="payment_setting_payment4_typename">Способ расчёта 4:</string>
    <string name="payment_setting_payment5_typename">Способ расчёта 5:</string>
    <string name="payment_setting_payment6_typename">Способ расчёта 6:</string>
    <string name="payment_setting_payment7_typename">Способ расчёта 7:</string>
    <string name="payment_setting_payment8_typename">Способ расчёта 8:</string>
    <string name="payment_setting_payment2_type">Номер формы расчёта 2:</string>
    <string name="payment_setting_payment3_type">Номер формы расчёта 3:</string>
    <string name="payment_setting_payment4_type">Номер формы расчёта 4:</string>
    <string name="payment_setting_payment5_type">Номер формы расчёта 5:</string>
    <string name="payment_setting_payment6_type">Номер формы расчёта 6:</string>
    <string name="payment_setting_payment7_type">Номер формы расчёта 7:</string>
    <string name="payment_setting_payment8_type">Номер формы расчёта 8:</string>
    <string name="print_settings_allow_printing">Разрешить команду \"Печать строки\":</string>
    <string name="print_settings_qr_correction">Уровень коррекции QR-кода:</string>
    <string name="print_settings_print_kkt_number">Печатать номер ККТ в магазине:</string>
    <string name="print_settings_print_full_payment">Печатать \"Полный расчёт\":</string>
    <string name="print_settings_print_payment_subject">Печатать признак предмета расчёта:</string>
    <string name="print_settings_print_ofd_name">Печатать \"Наименование ОФД\":</string>
    <string name="print_settings_print_email">Печатать \"E-mail отправителя\":</string>
    <string name="print_settings_print_vendor_inn">Печатать \"ИНН поставщика\":</string>
    <string name="reports_settings_print_cheques_count">Печатать информацию о кол-ве чеков за смену по типам операций:</string>
    <string name="reports_settings_print_splits">Печатать разделители в суточных отчётах:</string>
    <string name="reports_settings_print_taxes">Печатать налоги в X и Z отчётах:</string>
    <string name="reports_settings_print_null_taxes">Печатать нулевые налоги</string>
    <string name="reports_settings_print_profitloss_summ">Печатать необ. сумму приходов и расходов:</string>
    <string name="reports_settings_print_profit_return">Печатать необ. сумму возвратов приходов:</string>
    <string name="reports_settings_print_loss_return">Печатать необ. сумму возвратов расходов:</string>
    <string name="reports_settings_print_extra_blocks">Не печатать блоки “приход”,“расход”,”возврат”:</string>
    <string name="reports_settings_print_null_summ">Не печатать нулевые суммы:</string>
    <string name="reports_settings_print_z_report">Не печатать Z-отчёт при закрытии смены:</string>
    <string name="reports_settings_print_summ_profit">Печатать необ. сумму по способам расчёта прихода:</string>
    <string name="reports_settings_print_summ_loss">Печатать необ. сумму по способам расчёта расхода:</string>
    <string name="font_settings_cheque_pattern">Шаблон чека:</string>
    <string name="font_settings_line_split">Междустрочный интервал:</string>
    <string name="font_settings_font_size">Шрифт:</string>
    <string name="font_settings_symbols_count">Кол-во символов в строке:</string>
    <string name="users_settings_cashier1_name">ФИО кассира 1:</string>
    <string name="users_settings_cashier1_password">Пароль кассира 1:</string>
    <string name="users_settings_cashier1_inn">ИНН кассира 1:</string>
    <string name="users_settings_cashier2_name">ФИО кассира 2:</string>
    <string name="users_settings_cashier2_password">Пароль кассира 2:</string>
    <string name="users_settings_cashier2_inn">ИНН кассира 2:</string>
    <string name="users_settings_cashier3_name">ФИО кассира 3:</string>
    <string name="users_settings_cashier3_password">Пароль кассира 3:</string>
    <string name="users_settings_cashier3_inn">ИНН кассира 3:</string>
    <string name="users_settings_cashier4_name">ФИО кассира 4:</string>
    <string name="users_settings_cashier4_password">Пароль кассира 4:</string>
    <string name="users_settings_cashier4_inn">ИНН кассира 4:</string>
    <string name="users_settings_cashier5_name">ФИО кассира 5:</string>
    <string name="users_settings_cashier5_password">Пароль кассира 5:</string>
    <string name="users_settings_cashier5_inn">ИНН кассира 5:</string>
    <string name="users_settings_admin_name">ФИО администратора</string>
    <string name="users_settings_admin_password">Пароль администратора</string>
    <string name="users_settings_admin_inn">ИНН администратора</string>
    <string name="users_settings_system_admin_name">ФИО системного администратора</string>
    <string name="users_settings_system_admin_password">Пароль системного администратора</string>
    <string name="users_settings_system_admin_inn">ИНН системного администратора</string>
    <string name="cliche_settings_footer_size">Кол-во строк после чека:</string>
    <string name="cliche_settings_header_size">Кол-во строк заголовка:</string>
    <string name="cliche_settings_cutter_distance1">Расстояние от ТПГ до отрезного ножа:</string>
    <string name="kkt_info_result">Результат:</string>
    <string name="km_check_km_text">Поле ввода КМ:</string>
    <string name="km_check_km_type">Представление КМ:</string>
    <string name="km_check_send">Начать проверку</string>
    <string name="km_check_accept">Принять КМ</string>
    <string name="km_check_reject">Отказаться от КМ</string>
    <string name="service_datetime_title">Дата и время:</string>
    <string name="service_datetime_text">Дата и время:</string>
    <string name="service_get_datetime">Прочитать из ККТ</string>
    <string name="service_set_datetime">Установить дату и время</string>
    <string name="service_functions_title">Другие функции:</string>
    <string name="service_beep">Звуковой сигнал</string>
    <string name="service_cut_tape">Отрезать ЧЛ</string>
    <string name="service_open_cashbox">Открыть ДЯ</string>
    <string name="service_rewind_tape">Промотать ЧЛ</string>
    <string name="service_reboot_kkt">Перезагрузить ККТ</string>
</resources>