<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_drawer">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main"
            android:icon="@mipmap/home_icon"
            android:title="@string/menu_main">
        </item>
        <item
            android:id="@+id/menu_connection"
            android:icon="@mipmap/connection_icon"
            android:title="@string/menu_connection">
        </item>
        <item
            android:id="@+id/menu_settings"
            android:icon="@mipmap/settings_icon"
            android:title="@string/menu_settings">
        </item>
        <item
            android:id="@+id/menu_kkt_info"
            android:icon="@mipmap/info_icon"
            android:title="@string/menu_kkt_info">
        </item>
        <item
            android:id="@+id/menu_fn_info"
            android:icon="@mipmap/info_icon"
            android:title="@string/menu_fn_info">
        </item>
        <item
            android:id="@+id/menu_reg_kkt"
            android:icon="@mipmap/reg_icon"
            android:title="@string/menu_reg_kkt">
        </item>
        <item
            android:id="@+id/menu_cheques"
            android:icon="@mipmap/cheque_icon"
            android:title="@string/menu_cheques">
        </item>
        <item
            android:id="@+id/menu_reports"
            android:icon="@mipmap/report_icon"
            android:title="@string/menu_reports">
        </item>
        <item
            android:id="@+id/menu_cashiers"
            android:icon="@mipmap/user_icon"
            android:title="@string/menu_cashier">
        </item>
        <item
            android:id="@+id/menu_km_check"
            android:icon="@mipmap/check_icon"
            android:title="@string/menu_km_check">
        </item>
        <item
            android:id="@+id/menu_service"
            android:icon="@mipmap/service_icon"
            android:title="@string/menu_service">
        </item>
        <item
            android:id="@+id/menu_test_print"
            android:icon="@mipmap/print_icon"
            android:title="@string/menu_test_print">
        </item>
        <item
            android:id="@+id/menu_fin_ops"
            android:icon="@mipmap/money_icon"
            android:title="@string/menu_fin_ops">
        </item>
    </group>

</menu>