<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_datetime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_datetime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_datetime_title"
                android:textAlignment="center"
                android:theme="@style/TextStyle"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_datetime_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:padding="15dp"
            android:background="@drawable/elem_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_datetime_title">

            <TextView
                android:id="@+id/tv_datetime_text"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/service_datetime_text"
                android:textAlignment="textStart"
                android:theme="@style/TextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/et_datetime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="01.01.2000 12:00"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="235dp"
                app:layout_constraintStart_toEndOf="@id/tv_datetime_text"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_service_buttons1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_datetime_text">

            <Button
                android:id="@+id/get_datetime_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_get_datetime"
                android:theme="@style/TextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </Button>

            <Button
                android:id="@+id/set_datetime_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_set_datetime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_datetime_button">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/service_sep"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_service_buttons1">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_functions_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_sep">

            <TextView
                android:id="@+id/tv_functions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_functions_title"
                android:textAlignment="center"
                android:theme="@style/TextStyle"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_service_buttons2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_functions_title">

            <Button
                android:id="@+id/beep_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_beep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </Button>

            <Button
                android:id="@+id/cut_tape_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_cut_tape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/beep_button">

            </Button>

            <Button
                android:id="@+id/open_cashbox_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_open_cashbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cut_tape_button">

            </Button>

            <Button
                android:id="@+id/rewind_tape_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_rewind_tape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/open_cashbox_button">

            </Button>

            <Button
                android:id="@+id/reboot_kkt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextStyle"
                android:text="@string/service_reboot_kkt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rewind_tape_button">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>